Render product card

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,6 +4,7 @@
   border-top-right-radius: 30px;
   border-top-left-radius: 30px;
   padding: 29px;
+  margin-top: 20px;
 
   display: flex;
   justify-content: space-between;
