--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,12 +1,3 @@
-.title {
-  font-size: 20px;
-  font-weight: 600;
-  color: #838383;
-  margin-bottom: 20px;
-}
-
 .section {
-  display: flex;
-  gap: 30px;
-  flex-wrap: wrap;
+  margin-top: 20px;
 }
