--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,10 @@ a {
   text-decoration: none;
   color: black;
 }
+
+button {
+  font-family: inherit;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
