--- a/src/components/ItemCardBasket/ItemCartBasket.module.scss
+++ b/src/components/ItemCardBasket/ItemCartBasket.module.scss
@@ -17,4 +17,80 @@
       transform: scale(1.1);
     }
   }
+
+  .product {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+
+  .imageContainer {
+    width: 150px;
+    height: 140px;
+
+    .image {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      pointer-events: none;
+      user-select: none;
+    }
+  }
+
+  .productInfo {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 35px;
+
+    .title {
+      font-size: 17px;
+      font-weight: 500;
+    }
+
+    .price {
+      color: #AAAAAA;
+      font-weight: 600;
+      font-size: 15px;
+    }
+  }
+
+  .cartItemBottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+
+    .countWrapper {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-left: 20px;
+
+      .icon {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        transition: transform .3s;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+
+      .count {
+        font-size: 17px;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20px;
+      }
+    }
+
+    .totalPrice {
+      font-size: 15px;
+      font-weight: 600;
+    }
+  }
 }
