--- a/src/pages/CartPage/CartPage.module.scss
+++ b/src/pages/CartPage/CartPage.module.scss
@@ -19,6 +19,8 @@
   .cartSummary {
     width: 350px;
     align-self: start;
+    position: sticky;
+    top: 20px;
 
     background-color: #FFFFFF;
     border-radius: 30px;
