--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,6 +20,10 @@
     align-items: center;
     gap: 45px;
 
+    .cartLink {
+      position: relative;
+    }
+
     .icon {
       cursor: pointer;
       width: 22px;
@@ -29,6 +33,23 @@
       &:hover {
         transform: scale(1.1);
       }
+    }
+
+    .count {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      background-color: #FFA542;
+      color: white;
+      font-size: 15px;
+      font-weight: 500;
+      min-width: 18px;
+      height: 18px;
+      border-radius: 9px;
+      top: -7px;
+      right: -10px;
+      padding: 2px;
     }
   }
 }
