Disable scroll when modal is open

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
