Disable processed button when cart is empty

--- a/src/pages/CartPage/CartPage.module.scss
+++ b/src/pages/CartPage/CartPage.module.scss
@@ -51,6 +51,11 @@
       &:hover {
         transform: scale(1.05);
       }
+
+      &:disabled {
+        background-color: #838383;
+        cursor: not-allowed;
+      }
     }
   }
 }
