--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   gap: 30px;
   padding: 15px;
-  max-width: 800px;
-  min-width: 600px;
+  background-color: white;
+  border-radius: 30px;
 }
 
 .productWrapper {
