--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -28,21 +28,10 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  flex: 1;
 
   .descriptionTitle {
     font-size: 17px;
     font-weight: 600;
   }
-}
-
-.rateWrapper {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.rate {
-  color: #838383;
-  font-size: 17px;
-  font-weight: 600;
 }
