--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -9,6 +9,13 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  @media (max-width: 390px) {
+    flex-direction: column;
+    gap: 20px;
+  }
 
   .logo {
     font-size: 25px;
