--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,3 +1,41 @@
+.searchContainer {
+  display: flex;
+  justify-content: flex-end;
+
+  .searchWrapper {
+    position: relative;
+
+    .input {
+      min-width: 230px;
+      min-height: 30px;
+      border-radius: 10px;
+      border: 1px solid transparent;
+      padding: 10px 35px 10px 15px;
+      font-size: 14px;
+
+      &:hover {
+        border: 1px solid #c9c4c4;
+      }
+
+      &:active {
+        border: 1px solid #9a9a9a;
+      }
+
+      &:focus {
+        border: 1px solid #b6b5b5;
+      }
+    }
+
+    .closeIcon {
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 20px;
+    }
+  }
+}
+
 .section {
   margin-top: 20px;
 }
