--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -4,6 +4,15 @@
   padding: 15px;
   background-color: white;
   border-radius: 30px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
+}
+
+.image {
+  width: 200px;
+  align-self: center;
 }
 
 .productWrapper {
@@ -17,6 +26,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 
   .title {
     font-size: 20px;
