--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,13 +1,19 @@
 .searchContainer {
   display: flex;
   justify-content: flex-end;
+  margin-bottom: 10px;
 
   .searchWrapper {
     position: relative;
 
+    @media (max-width: 390px) {
+      width: 100%;
+    }
+
     .input {
       min-width: 230px;
       min-height: 30px;
+      max-width: 100%;
       border-radius: 10px;
       border: 1px solid transparent;
       padding: 10px 35px 10px 15px;
@@ -23,6 +29,10 @@
 
       &:focus {
         border: 1px solid #b6b5b5;
+      }
+
+      @media (max-width: 390px) {
+        width: 100%;
       }
     }
 
